--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h6 {
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
+  scroll-behavior: smooth;
 
   .main__list {
     padding: 0;
@@ -153,6 +154,39 @@ h6 {
     &:hover {
       transform: scale(1.1);
       background: var(--btn-hover-color);
+    }
+  }
+}
+
+.template__msg {
+  margin: 4px;
+  padding: 4px 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+
+  span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border-radius: 50%;
+  }
+
+  p {
+    padding: 4px 8px;
+    border-radius: 12px;
+  }
+  &.template__msg {
+    align-self: flex-end;
+    align-items: flex-end;
+
+    span,
+    p {
+      background-color: var(--user-bg-color);
     }
   }
 }
